<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background"
    tools:context=".ui.first_screen.FirstScreenActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/iv_name_icon"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:src="@drawable/ic_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/icon"
        />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_name_layout"
            style="?attr/textInputFilledDenseStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="51dp"
            android:layout_marginHorizontal="24dp"
            android:hint="@string/name"
            app:boxStrokeWidthFocused="0dp"
            app:boxStrokeWidth="0dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_name_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_name_input"
                android:background="@drawable/rounded_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_palindrome_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/textInputFilledDenseStyle"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            android:hint="@string/palindrome"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxStrokeWidthFocused="0dp"
            app:boxStrokeWidth="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_palindrome_input"
                android:background="@drawable/rounded_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/poppins"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@id/ed_palindrome_layout"
            android:text="@string/check"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"/>
        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/poppins"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@id/btn_check"
            android:text="@string/next"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>